# IC-dsmcFoam

./: README.md
dsmcFoamPlusGpu-master/applications/solvers/discreteMethods/dsmc/dsmcFoamPlus/: dsmcFoamPlus.C
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/boundaries/derived/generalBoundaries/dsmcChapmanEnskogFreeStreamInflowPatch/: dsmcChapmanEnskogFreeStreamInflowPatch.C  dsmcChapmanEnskogFreeStreamInflowPatch.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/boundaries/derived/generalBoundaries/dsmcFreeStreamInflowFieldPatch/: dsmcFreeStreamInflowFieldPatch.C  dsmcFreeStreamInflowFieldPatch.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/boundaries/derived/generalBoundaries/dsmcFreeStreamInflowPatch/: dsmcFreeStreamInflowPatch.C  dsmcFreeStreamInflowPatch.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/boundaries/derived/generalBoundaries/dsmcPlumeInflowPatch/: dsmcPlumeInflowPatch.C  dsmcPlumeInflowPatch.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/boundaries/derived/patchBoundaries/dsmcDeletionPatch/: dsmcDeletionPatch.C  dsmcDeletionPatch.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/clouds/: dsmcCloud.C  dsmcCloud.H
dsmcFoamPlusGpu-master/src/lagrangian/dsmc/collisions/derived/LarsenBorgnakkeVariableHardSphere/: LarsenBorgnakkeVariableHardSphere.C  LarsenBorgnakkeVariableHardSphere.H
dsmcFoamPlusGpu-master/src/lagrangian/molecularDynamics/polyCloud/controllers/derived/others/polyLiquidGasDistinction/: polyLiquidGasDistinction.C
dsmcFoamPlusGpu-master/src/lagrangian/molecularDynamics/polyCloud/measurements/derived/otherFields/polyZoneRdf/: polyZoneRdf.C
dsmcFoamPlusGpu-master/tutorials/discreteMethods/dsmcFoamPlus/axisymmetricBluntCylinder/: monitor
dsmcFoamPlusGpu-master/tutorials/discreteMethods/dsmcFoamPlus/freeSpacePeriodic/: monitor
dsmcFoamPlusGpu-master/tutorials/discreteMethods/dsmcFoamPlus/hypersonicFlatPlate/: monitor
dsmcFoamPlusGpu-master/tutorials/discreteMethods/dsmcFoamPlus/microScaleTestCase/: monitor
dsmcFoamPlusGpu-master/tutorials/discreteMethods/dsmcFoamPlus/orion107kmNonReactingFlow/: monitor
dsmcFoamPlusGpu-master/tutorials/discreteMethods/mdFoamPlus/equilibriumWaterCube/system/: controllersDict  fieldPropertiesDict
solver_dsmc-master/gpu_dsmc/: gpudsmcFoamPlus.C  gpudsmcFoamPlus.dep
solver_dsmc-master/gpu_dsmc/0/: dsmcSigmaTcRMax
solver_dsmc-master/gpu_dsmc/0/lagrangian/dsmc/: ELevel  ERot  classification  newParcel  origProcId  radialWeight  stuckToWall  typeId
solver_dsmc-master/gpu_dsmc/0/uniform/lagrangian/dsmc/: cloudProperties
solver_dsmc-master/gpu_dsmc/5e-05/: Ma_Ar  UMean_Ar  densityError_Ar  dsmcRhoNMean_Ar  dsmcRhoN_Ar  dsmcSigmaTcRMax  electronicT_Ar  fD_Ar  mctTimeStepRatio_Ar  meanCollisionRate_Ar  meanCollisionSeparationAr  meanCollisionTime_Ar  meanFreePathCellRatio_Ar  overallT_Ar  p_Ar  pressureError_Ar  rhoM_Ar  rhoN_Ar  rotationalT_Ar  separationOfFreePaths_Ar  surfaceHeatTransfer_Ar  surfaceShearStress_Ar  temperatureError_Ar  translationalT_Ar  variableHardSphereMeanFreePath_Ar  velocityError_Ar  vibrationalT_Ar
solver_dsmc-master/gpu_dsmc/5e-05/lagrangian/dsmc/: ELevel  ERot  classification  newParcel  origProcId  radialWeight  stuckToWall  typeId
solver_dsmc-master/gpu_dsmc/5e-05/uniform/: time
solver_dsmc-master/gpu_dsmc/5e-05/uniform/lagrangian/dsmc/: cloudProperties
solver_dsmc-master/gpu_dsmc/CUDACOD/: CMakeLists.txt
solver_dsmc-master/gpu_dsmc/CUDACOD/doc/: conf.py  doxyfile.config  index.rst  requirements.txt  test.rst
solver_dsmc-master/gpu_dsmc/CUDACOD/include/: distribution_evolution_tests.cuh  distribution_evolution_tests.hpp  distribution_generation_tests.cuh  distribution_generation_tests.hpp  entropy.h  helper_cuda.h  random_number_generation_tests.cuh  random_number_generation_tests.hpp  test_helpers.cuh  test_helpers.hpp
solver_dsmc-master/gpu_dsmc/CUDACOD/include/cuda_dsmc/: custom_sink.hpp  declare_device_constants.cuh  declare_host_constants.hpp  define_device_constants.cuh  define_host_constants.hpp  distribution_evolution.cuh  distribution_evolution.hpp  distribution_generation.cuh  distribution_generation.hpp  random_numbers.cuh  random_numbers.hpp  trapping_potential.cuh  trapping_potential.hpp  vector_math.cuh
solver_dsmc-master/gpu_dsmc/CUDACOD/include/g3log/: generated_definitions.hpp  logworker.hpp
solver_dsmc-master/gpu_dsmc/CUDACOD/src/: CMakeLists.txt  distribution_evolution.cpp  distribution_evolution.cu  distribution_generation.cpp  distribution_generation.cu  main.cpp  random_numbers.cpp  random_numbers.cu  trapping_potential.cpp  trapping_potential.cu  vector_math.cu
solver_dsmc-master/gpu_dsmc/CUDACOD/test/: CMakeLists.txt  distribution_evolution_test.cpp  distribution_evolution_test.cu  distribution_generation_test.cpp  distribution_generation_test.cu  random_number_generation_test.cpp  random_number_generation_test.cu  test_helpers.cpp  test_helpers.cu
solver_dsmc-master/gpu_dsmc/Make/: files
solver_dsmc-master/gpu_dsmc/Make/linux64GccMNFDPOpt/: dependencyFiles  files  filesMacros  includeDeps  localObjectFiles  objectFiles  options  sourceFiles
solver_dsmc-master/gpu_dsmc/constant/polyMesh/: boundary  neighbour  owner  points
solver_dsmc-master/gpu_dsmc/system/: controlDict
